--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 REACT_APP_BLOCKCHAIN_NETWORK_ID=0x61
 REACT_APP_FRONTEND_ORIGIN=localhost:3000
+REACT_APP_BLOCKCHAIN_NETWORK_NAME=bsc-testnet
+REACT_APP_BLOCKCHAIN_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
+REACT_APP_BLOCKCHAIN_RPC_PORT=8545
+REACT_APP_BLOCKCHAIN_SYMBOL=LETH
