--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+    "web3": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
