--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
     "web3": "^4.0.3"
   },
   "scripts": {
