--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-bootstrap": "^0.32.35"
+  },
+  "browserlist": "last 1 chrome version"
 }
